Fix post content not overflowing on mobile

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -104,6 +104,10 @@ ul {
   grid-template-rows: auto 1fr auto;
 }
 
+main {
+  overflow: auto;
+}
+
 .index-see-all {
   margin-left: 14%;
   padding-left: 30px;
@@ -206,6 +210,7 @@ main pre {
   border-color: #fff;
   padding: 20px;
   font-size: 16px;
+  overflow: auto;
 }
 
 blockquote {
